# cpp-lab

./: .gitignore  .replit  CMakeLists.txt  app  ci.yml  dev.sh  main  replit.nix
.ccls-cache/@home@runner@workspace/: main.cpp  main.cpp.blob
include/: mylib.hpp
src/: main.cpp  mylib.cpp
